infrastructure/network-policies/namespaces/ntfy.yaml
---
# ntfy - Push notification server
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ntfy
  namespace: ntfy
spec:
  description: "Allow ntfy notification server"
  endpointSelector: {}
  ingress:
    # Allow Traefik for web UI
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: traefik
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
    # Allow notifications from all namespaces
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
  egress:
    # Allow push to mobile devices (Google FCM, Apple APNS)
    - toCIDR:
        - 0.0.0.0/0
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    # DNS resolution (required per Cilium bug #34390)
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
