infrastructure/network-policies/namespaces/storage.yaml
---
# SeaweedFS S3 + backup CronJob
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-storage
  namespace: storage
spec:
  description: "Allow SeaweedFS S3 and backup operations"
  endpointSelector: {}
  ingress:
    # S3 API from all cluster pods
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: "8333"
              protocol: TCP
    # Filer HTTP from cluster
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: "8888"
              protocol: TCP
    # Monitoring scrape
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: "9327"
              protocol: TCP
    # Intra-namespace (master↔volume↔filer)
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: storage
      toPorts:
        - ports:
            - port: "9333"
              protocol: TCP
            - port: "8080"
              protocol: TCP
  egress:
    # DNS
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    # Intra-namespace
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: storage
      toPorts:
        - ports:
            - port: "9333"
              protocol: TCP
            - port: "8080"
              protocol: TCP
            - port: "8333"
              protocol: TCP
            - port: "8888"
              protocol: TCP
    # K8s API
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    # NFS to TrueNAS storage VLAN
    - toCIDR:
        - <vlan-cidr>
      toPorts:
        - ports:
            - port: "2049"
              protocol: TCP
            - port: "111"
              protocol: TCP
    # HTTPS egress for mc binary download + Harbor pulls
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
